# jg-compliance-monitor

./: .gitignore  CMakeLists.txt
conf/: agent.db  agent.ini  agent_ddl.sql
include/: errcodes.h  utils.h
include/model/: basemdl.h
include/windows/: classif_json.h  config.h  dispatcher.h  dispatcher_types.h  evtlog.h  ini_config.h  logging.h  pe_file_prop.h  service.h  win-queue.h  winreg_config.h
include/windows/db/: agent_db.h  db_model.h  db_model_proc.h
include/windows/scan/: cvepde_agent.h  proc_agent.h  scan_agent.h  search_fs.h
include/windows/service/: jvm_worker.h
lib/: pcre2-16-static_x64.lib  pcre2-16-static_x86.lib
res/: agent.mc  agent.rc  pattern-classif.json
windows-src/: classif_json.c  config.c  dispatcher.c  evtlog.c  ini_config.c  logging.c  main.c  model_proc.c  pe_file_prop.c  service.c  utils.c  win-queue.c  winreg_config.c
windows-src/cjson/: cJSON.c
windows-src/db/: agent_db.c  db_model.c  db_model_proc.c
windows-src/fsscan/: scan_agent.c  search_fs.c
windows-src/workers/: jvm_worker.c
